read more updates

--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -257,7 +257,7 @@
 						<p class="small">
 							The information contained herein has either been given to us by the owner of the property or obtained from sources that we deem reliable. We have no reason to doubt its accuracy but we do not guarantee it. All zoning, buildable footages and uses must be independently verified. The value of this investment is dependent on these estimates and assumptions made above, as well as the investment income, the tax bracket, and other factors which you tax advisor and/or legal counsel should evaluate. The prospective buyer should carefully verify each item of income, and all other information herein.
 						</p>
-					<a class="expander-prev" href=""><i  class="fa fa-plus-circle green"></i><span>Read More</span></a>
+					<a class="read-more-expander expander-prev block" href=""><i  class="fa fa-plus-circle green"></i><span>Read More</span></a>
 					{{ endif }}
 				</div>
 				{{ endif }}
