--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -71,7 +71,7 @@ p {
         font-size: 24px;
         margin-top: 60px;
         line-height: 36px;
-        @include pre(2);
+        @include pre(2 of 12);
         @include span (8 of 12);
         text-align: center;
     }
