twitter styles plus ids

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -140,6 +140,9 @@ img {
   // padding-bottom: 0; 
   @include clearfix;
   padding-top: 60px;
+  &.properties {
+  	padding-top: 0;
+  }
 }
 
 .grid-item {
