--- a/statamic/_themes/main/templates/blog_entry.html
+++ b/statamic/_themes/main/templates/blog_entry.html
@@ -32,7 +32,7 @@
 						</ul>
 						</ul>
 						<h2 class="blog-header">Other News</h2>
-						<div class="twitter-feed">
+						<div class="twitter-feed background-gray">
 							{{ theme:partial src="twitter" }}
 						</div>
 					</div>
