--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,7 +20,8 @@
 @import 'third-party/_slick.scss';
 @import 'third-party/_react-select.scss';
 // @import 'third-party/_fotorama.scss';
-@import 'third-party/_animate.scss';
+// @import 'third-party/_animate.scss';
+@import 'third-party/_selectize.scss';
 
 
 // components
@@ -38,6 +39,7 @@
 @import 'components/_company.scss';
 @import 'components/_blog_overview.scss';
 @import 'components/_blog_entry.scss';
+@import 'components/_twitter_block.scss';
 
 // modules
 @import 'modules/_hero.scss';
@@ -47,6 +49,7 @@
 @import 'modules/_landing_subnav.scss';
 @import 'modules/_circle.scss';
 @import 'modules/_property_tiles.scss';
+@import 'modules/_property_card.scss';
 @import 'modules/_neighborhood_tiles.scss';
 @import 'modules/_insight_tile.scss';
 @import 'modules/_agents_tile.scss';
@@ -56,6 +59,7 @@
 @import 'modules/_faq_list.scss';
 @import 'modules/_featured_post.scss';
 @import 'modules/_social.scss';
+
 
 
 // pages
