--- a/statamic/_themes/main/templates/agent_individual.html
+++ b/statamic/_themes/main/templates/agent_individual.html
@@ -83,15 +83,15 @@
 
 
 				
-			{{ entries:listing folder="properties/sale|properties/lease" conditions="agents:{url}" }}
+			{{ entries:listing folder="properties/garfield/sale|properties/garfield/lease|properties/beauchamp/sale|properties/beauchamp/lease" conditions="agents:{url}" }}
 				{{ theme:partial src="property_tile_agent" use_context="true" }}  
 			{{ /entries:listing }}
 			
-			{{ entries:listing folder="properties/sale|properties/sold" conditions="agents:{url}, sold:true" sort_by="price" sort_dir="desc" }}
+			{{ entries:listing folder="properties/garfield/sale|properties/garfield/sold|properties/beauchamp/sale|properties/beauchamp/sold" conditions="agents:{url}, sold:true" sort_by="price" sort_dir="desc" }}
 			{{ theme:partial src="recent_transactions_sale" use_context="true" }}
 			{{ /entries:listing }}
 
-			{{ entries:listing folder="properties/lease|properties/leased" conditions="agents:{url}, leased:true" sort_by="price" sort_dir="desc" }}
+			{{ entries:listing folder="properties/garfield/lease|properties/garfield/leased|properties/beauchamp/lease|properties/beauchamp/leased" conditions="agents:{url}, leased:true" sort_by="price" sort_dir="desc" }}
 			{{ theme:partial src="recent_transactions_rental" use_context="true" }}
 			{{ /entries:listing }}
 
