--- a/statamic/_themes/main/partials/property_card.html
+++ b/statamic/_themes/main/partials/property_card.html
@@ -2,7 +2,7 @@
 <p class="no_results">We are currently have no properties for Sale or Lease in this neighborhood. Be sure to check back soon.</p>
 {{ else }}
 {{ if first }}
-<ul class="grid">
+<ul class="grid properties">
 {{ endif }}
 <li class="grid-item property_tile">
 	<a href="{{ url }}" class="property_box">
