--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -14,6 +14,9 @@ footer {
 		line-height: 24px;
 		font-weight: 300;
 	}
+	li {
+		display: block;
+	}
 	h3 {
 		margin-bottom: 10px;
 	}
@@ -32,9 +35,21 @@ footer {
 		border-top: 1px solid darken($light-font-color,20%)	;
 		padding-top: 10px;
 		padding-bottom: 10px;
-		text-align: center;
+		.container {
+			padding: 0;
+		}
+		
 		p {
 			font-weight: 300;
+			@include span(6 of 12);
+			font-family: $base-font-family;
+		}
+		.social {
+			@include span(last 6 of 12);
+			text-align: right;
+			a i {
+				font-size: 24px;
+			}
 		}
 	}
 }
