--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -2798,6 +2798,9 @@ footer h3, footer h4 {
   line-height: 24px;
   font-weight: 300; }
 
+footer li {
+  display: block; }
+
 footer h3 {
   margin-bottom: 10px; }
 
@@ -2813,11 +2816,30 @@ footer .fa-inverse {
 footer .footer-divider {
   border-top: 1px solid #666666;
   padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: center; }
+  padding-bottom: 10px; }
+
+footer .footer-divider .container {
+  padding: 0; }
 
 footer .footer-divider p {
-  font-weight: 300; }
+  font-weight: 300;
+  box-sizing: border-box;
+  width: 50%;
+  float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%;
+  font-family: Arial, "Lucida Grande", sans-serif; }
+
+footer .footer-divider .social {
+  box-sizing: border-box;
+  width: 50%;
+  float: right;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%;
+  text-align: right; }
+
+footer .footer-divider .social a i {
+  font-size: 24px; }
 
 #map-canvas {
   width: 100%;
