--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -9,7 +9,19 @@
       </li>
     </ul >
       <ul class="right">
-        {{ nav from="/" max_depth="1" }}
+
+        {{ nav from="/properties" max_depth="1" }}
+        <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
+         {{ if is_current || is_parent }}
+         {{ if children }}
+         <ul>
+          {{ *recursive children* }}
+        </ul>
+        {{ endif }}
+        {{ endif }}
+        {{ /nav }}
+
+        {{ nav from="/" max_depth="1" exclude="properties|company|reports|faq"}}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
