--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -10,7 +10,7 @@
     </ul >
       <ul class="right">
 
-        {{ nav from="/properties" max_depth="1" }}
+        {{ nav from="/properties" max_depth="1" sort_dir="desc" }}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
