--- a/statamic/_themes/main/templates/blog.html
+++ b/statamic/_themes/main/templates/blog.html
@@ -35,24 +35,27 @@
 				{{ endif }}
 				{{ /entries:listing }}
 				{{ theme:partial src="blog_right" use_context="true" }}
-			</div>
-		</div>
-	</section>
-
-	<div class="container">
+					<div class="container">
+<div class="blog-left">
 		{{ entries:pagination folder="blog" limit="5" }}
 		{{ if next_page || previous_page }}
 		<div class="pagination clearfix">
 			{{ if next_page }}
-			<a href="{{ next_page }}" class="older">Older Posts</a>
+			<a href="{{ next_page }}" class="older"><i class="fa fa-angle-double-left"></i>Older Posts</a>
 			{{ endif }}
 			{{ if previous_page }}
-			<a href="{{ previous_page }}" class="newer">Newer Posts</a>
+			<a href="{{ previous_page }}" class="newer">Newer Posts<i class="fa fa-angle-double-right"></i></a>
 			{{ endif }}
 		</div>
 		{{ endif }}
 		{{ /entries:pagination }}
+</div>
 	</div>
+			</div>
+		</div>
+	</section>
+
+
 	
 
 </div>
