--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -68,6 +68,7 @@
 		flex-flow: column nowrap;
 		justify-content: space-between;
 		h2,h3,h4 {
+			text-align: left;
 			margin: 0;
 		}
 		h2,h3, p {
