--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3901,10 +3901,7 @@ section.services h3 {
   text-transform: uppercase; }
 
 .company h3 {
-  display: inline-block;
   text-align: center;
-  padding: 0 15px 25px 15px;
-  border-bottom: 1px solid #25282A;
   margin: 0 auto;
   font-weight: 700; }
 
@@ -3920,28 +3917,37 @@ section.services h3 {
   padding-left: 0.83333%;
   padding-right: 0.83333%; }
 
-.company.history h2, .company.history h4 {
-  font-family: "Copernicus-Medium";
-  line-height: 46px; }
+.company .divider {
+  height: 1px;
+  width: 200px;
+  background-color: #25282A;
+  margin: 30px auto; }
 
-.company.history h2 {
+.company.history h2, .company.history h4, .company.international h2, .company.international h4 {
+  font-family: "Copernicus-Medium";
+  line-height: 46px;
+  margin-bottom: 0; }
+
+.company.history h2, .company.international h2 {
   font-size: 36px;
   margin-bottom: 0;
   margin-top: 20px; }
 
-.company.history h4 {
+.company.history h4, .company.international h4 {
   display: inline-block;
   font-size: 26px;
-  border-bottom: 1px solid #25282A;
-  margin-top: 0;
-  padding: 0 15px 25px 15px; }
+  margin-top: 0; }
 
-.company.history h4:before, .company.history h4:after {
+.company.history h4:before, .company.history h4:after, .company.international h4:before, .company.international h4:after {
   content: "";
   display: table;
   clear: both; }
 
-.company.history .history-1 {
+.company.history img, .company.international img {
+  text-align: center;
+  display: inline-block; }
+
+.company.history .column-1, .company.international .column-1 {
   margin-left: 12.5%;
   box-sizing: border-box;
   width: 41.66667%;
@@ -3949,15 +3955,19 @@ section.services h3 {
   padding-left: 0.83333%;
   padding-right: 0.83333%; }
 
-.company.history .history-2 {
+.company.history .column-2, .company.international .column-2 {
   box-sizing: border-box;
   width: 41.66667%;
   float: left;
   padding-left: 0.83333%;
   padding-right: 0.83333%; }
 
-.company.history p {
+.company.history p, .company.international p {
   text-align: left; }
+
+.company.history a, .company.international a {
+  font-family: "Copernicus-MediumItalic";
+  font-size: 16px; }
 
 .company.why {
   background-image: url("../img/G.svg");
@@ -4790,6 +4800,25 @@ section.services h3 {
 .agents .grid-3-constrained-padding p {
   margin-bottom: 10px; }
 
+.agents .grid-3-constrained-padding.international img {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%); }
+
+.agents .divider {
+  margin-bottom: 60px; }
+
+.agents .divider:before, .agents .divider:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.agents .divider span {
+  font-weight: 700;
+  font-size: 14px;
+  display: inline-block;
+  padding: 0 20px 30px 20px;
+  border-bottom: 1px solid #25282A; }
+
 .reports .grid-constrained {
   margin-left: 18.75%;
   margin-right: 18.75%; }
@@ -4916,10 +4945,11 @@ section.services h3 {
 
 .quote-content {
   display: inline-block;
-  font-family: "Copernicus-Semibold";
+  font-family: "Copernicus-MediumItalic";
   font-size: 18px;
   line-height: 30px;
-  z-index: 100; }
+  z-index: 100;
+  color: #7a7a7a; }
 
 .quote-content .quote-symbol {
   position: absolute; }
@@ -4934,7 +4964,8 @@ section.services h3 {
   font-weight: 700;
   text-transform: uppercase;
   margin-top: 30px;
-  display: inline-block; }
+  display: inline-block;
+  color: #7a7a7a; }
 
 .service-quote {
   position: relative; }
