--- a/statamic/_themes/main/templates/agents.html
+++ b/statamic/_themes/main/templates/agents.html
@@ -1,20 +1,35 @@
 <section class="leading agents agents-background">
 	<div class="container centered">
-<h1>Our Team</h1>
-<h2>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</h2>
+		<h1>Our Team</h1>
+		<h2>In-depth real estate knowledge. Neighborhood focus &amp; expertise. A clear commitment to your goals. An entire company as your team. We are Garfield.</h2>
 		<div class="grid-constrained">
-			{{ entries:listing folder="agents/garfield" conditions="hidden:!true"}}
-
+			{{ entries:listing folder="agents/garfield" }}
 			<div class="grid-3-constrained-padding">
 				<div>
-				<a href="{{ url }}">
+					<a href="{{ url }}">
 						<img class="circle" src="{{ path src="{{ image }}" }}"></img>
 						<h3>{{ title }}</h3>
 					</a>
 					<p>{{ theme:partial src="svg/phone" }} {{ phone }}</p>
 					<a href="{{ email}}">{{ theme:partial src="svg/mail" }} {{ email }}</a>
 				</div>
-				<!-- <h2>{{ title }}</h2> -->
+			</div>
+			{{ /entries:listing }}
+		</div>
+
+		<div class="divider"><span>INTERNATIONAL</span></div>
+
+		<div class="grid-constrained">
+		{{ entries:listing folder="agents/beauchamp" }}
+			<div class="grid-3-constrained-padding international">
+				<div>
+					<a href="{{ url }}">
+						<img class="circle" src="{{ path src="{{ image }}" }}"></img>
+						<h3>{{ title }}</h3>
+					</a>
+					<p>{{ theme:partial src="svg/phone" }} {{ phone }}</p>
+					<a href="{{ email}}">{{ theme:partial src="svg/mail" }} {{ email }}</a>
+				</div>
 			</div>
 
 			{{ /entries:listing }}
