--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -5,7 +5,7 @@
 	</section>
 	<nav id="scroll-spy-nav" class="secondary-nav">
 		<ul class="nav" role="tablist">
-			<li><a class="scroll smooth" href="#individuals" >Individuals &amp; Families</a></li>
+			<li class="active"><a class="scroll smooth" href="#individuals" >Individuals &amp; Families</a></li>
 			<li><a class="scroll smooth" href="#trust">Trust &amp; Estates</a></li>
 			<li><a class="scroll smooth" href="#institutions">Institutions</a></li>
 			<li><a class="scroll smooth" href="#buyers">Buyers</a></li>
