--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -5,7 +5,7 @@
 <section class="darkest-seafoam-bg">
 	<div class="container company beliefs">
 		<h3>OUR BELIEFS</h3>
-		.divider
+		<div class="divider"></div>
 		{{ beliefs }}
 	</div>
 </section>
