--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -36,3 +36,21 @@
 		</ul>
 	</div>
 </section>
+<section class="background-gray">
+	<div class="container reports signup">
+		<h2>Register</h2>
+		<h3>Fill in the form to get the reports hot off the presses</h3>
+		<form>
+		  <div class="form-group half">
+		    <input type="text" id="firstName" placeholder="First Name">
+		  </div>
+		  <div class="form-group half">
+		    <input type="text" id="lastName" placeholder="Last Name">
+		  </div>
+		  <div class="form-group full-span">
+		    <input type="text" id="emailAddress" placeholder="Email Address">
+		  </div>
+		  <button type="submit" class="btn btn-contact">Send</button>
+		</form>
+	</div>
+</section>
