--- a/statamic/_themes/main/partials/property_card.html
+++ b/statamic/_themes/main/partials/property_card.html
@@ -23,12 +23,8 @@
 			<div class="bottom-info">
 				{{ if openhouse }}
 					<div class="red">Open House</div>
-				{{ elseif sold }}
-				<div>Sold</div>
-				{{ elseif leased }}
-				<div>Leased</div>
-				{{ elseif in_contract }}
-				<div>In Contract</div>
+				{{ elseif streeteasy_status != "Active"}}
+				<div>{{ streeteasy_status }}</div>
 				{{ endif }}
 			</div>
 		</div>
