--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -89,7 +89,7 @@
 						<span class="red">Open House: Enquire for Details</span>
 						{{ endif }}
 						{{ /openhouse_grid }}
-						{{ else }}
+						{{ elseif streeteasy_status != "Active" }}
 						<span>{{ streeteasy_status }}</span>
 						{{ endif }}
 
