fixed landing links and font size change

--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -1,7 +1,7 @@
 	<section class="hero leading" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
 		<h1>{{ tag_line }}</h1>
 		<h3>{{ sub_tag_line}}</h3>
-		<a href="{{ url }}properties" class="btn btn-garfield">VIEW PROPERTIES</a>
+		<a href="{{ url }}properties/new-york" class="btn btn-garfield">VIEW PROPERTIES</a>
 		<div class="mask"></div>
 	</section>	
 
@@ -17,7 +17,7 @@
 					</figcaption>
 				</figure>
 				</a>
-				<a href="{{ url }}properties" class="grid-3 centered circle-nav">
+				<a href="{{ url }}properties/new-york" class="grid-3 centered circle-nav">
 					<figure>
 						{{ theme:partial src="svg/home_building" }}
 						<figcaption>
