--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3310,7 +3310,8 @@ section.services h3 {
   display: flex;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  margin-bottom: 5px; }
 
 .property-agents svg {
   margin-right: 5px;
